classDiagram

MinorCineflex o-- Cinema
MinorCineflex o-- Person
class MinorCineflex{
        -cinema_list: List[Cinema]
        -person_list: List[Person]
        -movie_list: List[Movie]
        +add_cinema()
        +add_person()
        +add_all_movie()
        +search_person_account_id()
        +search_person_email()
        +get_person()
        +get_cinema()
        +get_cinema_by_id()
        +get_movie()
        +get_system()
        +get_cinema_by_id()
        +get_showtime_from_showtime_id()
        +get_seat()
        +get_seat_data()
        +get_account_from_userId()
        +get_movie_id()
        +delete_person_by_account_id()
        +delete_movie_by_movie_id()
        +delete_cinema_by_cinema_id()
        +update_cinema_by_cinema_id()
        +update_movie_by_movie_id()
        +put_seat()
        +create_seat()
        +get_seat_by_id()
    }

Cinema --> CinemaManagement
class Cinema {
        -cinema_id: str
        -name: str
        -location: str
        -region: str
        -opentime: datetime
        -closetime: datetime
        -cinema_management: CinemaManagement
    }

CinemaManagement o-- Theater
CinemaManagement o-- Showtime
CinemaManagement o-- Booking
CinemaManagement o-- Movie
class CinemaManagement{
        -theater_list: List[Theater]
        -showtime_list: List[Showtime]
        -booking_list: List[Booking]
        -movie_list: List[Movie]
        +add_cinema_theater()
        +add_cinema_showtime()
        +add_cinema_booking()
        +add_cinema_movie()
        +get_showtime()
        +get_showtime_by_id()
        +get_account_from_userId()
        +get_theater_by_id()
        +delete_theater_by_theater_id()
        +update_theater_by_theater_id()
        +get_theater()
    }

Person --> Account
class Person {
        -name: str
        -tel_no: str
        -email: str
        -birthday: datetime
        -gender: str
        -account: Account
        +update_person()
        +check_account_password()
    }

Account o-- Booking
Account o-- Document
class Account {
        -username: str
        -password: str
        -account_id: str
        -point: int
        -registered_date: datetime
        -exiration_date: datetime
        -history: List[Booking]
        -document_list: List[Document]
        -reserved_seat: List[Seat]
        +update_account()
        +append_to_reserve_seat()
        +clear_reserved_list()
    }   

class Movie {
        -name: str
        -img: str
        -type: str
        -movie_id: str
        -detail: str
        -duration: int
        -role: str
    }

Theater o-- Maintainance
class Theater {
        -theater_id: str
        -theater_name: str
        -theater_type: str
        -seat_amount: int
        -status: bool
        -audio_type: str
        -video_type: str
        -maintainance_list: List[Maintainance]
    }

Showtime --> Cinema
Showtime --> Theater
Showtime --> Movie
class Showtime {
        -showtime_id: str
        -start_date: datetime
        -cinema_id: str
        -theater_id: str
        -movie_id: str
        -dub: bool
        -sub: bool
        -available_seat: List[Seat]
        -reserved_seat: List[Seat]
        +append_avaliable_seat()
        +append_reserved_seat()
        +move_seat_from_avai_to_res()
        +get_seat_from_id()
    }

class Payment {
        -payment_type: str
    }

class Seat {
        -seat_id: str
        -seat_pos: str
        -seat_type: str
        -size: int
        -price: float
    }

class Maintainance {
        -detail: str
        -start_date: datetime
        -end_date: datetime
    }

Booking o-- Seat
Booking --> Payment
Booking --> Showtime
class Booking {
        -showtime: Showtime
        -account_id: str
        -seat_list: List[Seat]
        -booking_date: datetime
        -payment_method: Payment
        -total: float
    } 

Document --> Booking
class Document {
        -booking: Booking
        -document_type: str
    }
